@@ -1,5 +1,8 @@
 2004-11-15  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gdkwindow.xml (set_focus_on_map)
+	(enable_synchronized_configure, configure_finished): Add descriptions
+
 	* pygtk-gdkdragcontext.xml (drag_drop_succeeded): Add description.
 
 	* pygtk-gdkdisplay.xml (store_clipboard)
